# iot-lab1

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
configuration/: local.toml
docker/: docker-compose.yml
src/: config.rs  file_datasource.rs  lib.rs  main.rs
